--- a/index.html
+++ b/index.html
@@ -14,37 +14,12 @@
         <h1>給与明細シュミレーション</h1>
 
         <main>
-            <!-- 左カラム: 既存の入力・結果パネル -->
+            <!-- 左カラム: 試算入力・月額明細 -->
             <div class="left-column">
-                <!-- サブカード: 年間予想額 -->
-                <section class="card annual-card">
-                    <h2>年間予想額</h2>
-                    <div class="annual-grid">
-                        <div class="annual-item">
-                            <span class="annual-label">年収</span>
-                            <span class="annual-value" id="annualIncome">420万</span>
-                        </div>
-                        <div class="annual-item">
-                            <span class="annual-label">年間控除</span>
-                            <span class="annual-value" id="annualDeduction">92万</span>
-                        </div>
-                        <div class="annual-item">
-                            <span class="annual-label">年間手取り</span>
-                            <span class="annual-value highlight" id="annualNetPay">328万</span>
-                        </div>
-                        <div class="annual-item furusato">
-                            <span class="annual-label">🎁 ふるさと納税</span>
-                            <span class="annual-value accent" id="furusatoAmount">36,500 <span style="font-size:0.9em">（寄付金上限額 : 38,500）</span></span>
-                            <a href="https://furusato-nouzei.event.rakuten.co.jp/mypage/deduction-details/"
-                                target="_blank" class="furusato-link">詳しい試算はこちら（楽天ふるさと納税など）</a>
-                        </div>
-                    </div>
-                </section>
-
                 <!-- メインカード: 月額給与明細 -->
                 <section class="card main-card">
                     <h2>試算入力（月額給与）</h2>
-
+                    <!-- ... (inner content same as before) ... -->
                     <div class="input-section">
                         <div class="input-group">
                             <label for="totalPayment">支払総額</label>
@@ -173,22 +148,57 @@
                         </div>
                     </div>
                 </section>
+            </div>
+
+            <!-- 右カラム: 年間予想・グラフ・アドバイス -->
+            <div class="right-column">
+                <!-- サブカード: 年間予想額 -->
+                <section class="card annual-card">
+                    <h2>年間予想額</h2>
+                    <div class="annual-grid">
+                        <div class="annual-stats-row">
+                            <div class="annual-item">
+                                <span class="annual-label">年収</span>
+                                <span class="annual-value" id="annualIncome">420万</span>
+                            </div>
+                            <div class="annual-item">
+                                <span class="annual-label">年間控除</span>
+                                <span class="annual-value" id="annualDeduction">92万</span>
+                            </div>
+                            <div class="annual-item">
+                                <span class="annual-label">年間手取り</span>
+                                <span class="annual-value highlight" id="annualNetPay">328万</span>
+                            </div>
+                        </div>
+                        <div class="annual-item furusato">
+                            <div class="furusato-header">
+                                <span class="annual-label">🎁 ふるさと納税</span>
+                                <a href="https://furusato-nouzei.event.rakuten.co.jp/mypage/deduction-details/"
+                                    target="_blank" class="furusato-link">詳細・試算はこちら</a>
+                            </div>
+                            <div class="furusato-value-row">
+                                <span class="annual-value accent" id="furusatoAmount">36,500 <span
+                                        style="font-size:0.85em">（上限預目安: 38,500）</span></span>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+
+                <!-- グラフカード -->
+                <section class="card chart-card">
+                    <h2>月別収支シミュレーション</h2>
+                    <div class="chart-container">
+                        <canvas id="monthlyChart"></canvas>
+                    </div>
+                </section>
 
                 <!-- アドバイスカード -->
                 <section class="card advice-card" id="adviceCard">
                     <div class="advice-icon">💡</div>
                     <p class="advice-text" id="adviceText">
-                        4〜6月に残業が続くと、9月〜翌年8月の社会保険料が増加する可能性があります。
+                        残業時間を入力すると、残業時期による社会保険料への影響をシミュレーションできます。4〜6月の残業は「標準報酬月額」を押し上げ、9月〜翌年8月の保険料が上がります。
                     </p>
                 </section>
-            </div>
-
-            <!-- 右カラム: グラフ (PCのみ表示、スマホではCSSでdisplay制御も可だが今回は2カラム指定のみで下落ち想定) -->
-            <div class="right-column">
-                <h2>月別収支シミュレーション</h2>
-                <div class="chart-container">
-                    <canvas id="monthlyChart"></canvas>
-                </div>
             </div>
         </main>
 
