Add GitHub Pages link to header

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 
 <body>
     <div class="container">
-        <h1>給与明細シュミレーション</h1>
+        <h1><a href="https://watdat.github.io/SalarySimulatorApp/" target="_blank" class="header-link">給与明細シュミレーション</a>
+        </h1>
 
         <main>
             <!-- 左カラム: 試算入力・月額明細 -->
