通勤交通費の計算ロジック修正と入力画面の改善、および開発ルールの追加

--- a/index.html
+++ b/index.html
@@ -25,16 +25,16 @@
                         <div class="input-group">
                             <label for="totalPayment">支払総額</label>
                             <div class="input-wrapper">
-                                <input type="number" id="totalPayment" value="290000" min="0" step="1000"
-                                    placeholder="税引前">
+                                <input type="number" id="totalPayment" value="276000" min="0" step="1000"
+                                    placeholder="基本給・諸手当">
                                 <span class="unit">円</span>
                             </div>
                         </div>
                         <div class="input-group">
                             <label for="transportAllowance">通勤交通費</label>
                             <div class="input-wrapper">
-                                <input type="number" id="transportAllowance" value="14000" min="0" step="1000"
-                                    placeholder="税引前に含む">
+                                <input type="number" id="transportAllowance" value="13860" min="0" step="1000"
+                                    placeholder="非課税の通勤手当">
                                 <span class="unit">円</span>
                             </div>
                         </div>
